[package]
name = "eosio-srv"
version = "0.1.0"
authors = ["Ian Holsman <ian@holsman.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt="1.0"
eosio-client-api="0.2"
serde="1.0.114"
serde_derive="1.0.114"